k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afyahero
  labels:
    name: afyahero
    environment: production
    app: afyahero
spec:
  finalizers:
    - kubernetes
