k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afyahero-gateway
  namespace: afyahero
  labels:
    app: afyahero
    component: gateway
spec:
  type: ClusterIP
  selector:
    app: afyahero
    component: gateway
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: afyahero-web
  namespace: afyahero
  labels:
    app: afyahero
    component: web
spec:
  type: ClusterIP
  selector:
    app: afyahero
    component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: afyahero-superadmin
  namespace: afyahero
  labels:
    app: afyahero
    component: superadmin
spec:
  type: ClusterIP
  selector:
    app: afyahero
    component: superadmin
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: afyahero-headless
  namespace: afyahero
  labels:
    app: afyahero
spec:
  clusterIP: None
  selector:
    app: afyahero
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
